@@ -9,3 +9,4 @@ ABOUT_TITLE = About
 SOURCE_LINK_NAME = Sources on
 SOURCE_LINK_TITLE = Go to the gitorious makefly homepage
 THEME_IS = Theme is:
+LINKS_TITLE = Links
