@@ -9,3 +9,4 @@ ABOUT_TITLE = À propos
 SOURCE_LINK_NAME = Sources disponibles sur
 SOURCE_LINK_TITLE = Le projet Makefly sur Gitorious
 THEME_IS = Le thème est : 
+LINKS_TITLE = Liens
