@@ -10,3 +10,4 @@ DATE_FORMAT = %Y-%m-%d at %H:%M
 SHORT_DATE_FORMAT = %Y/%m
 INDEX_FILENAME = index
 PAGE_EXT = .html
+SIDEBAR = 0
