@@ -1,0 +1,3 @@
+  <aside>
+    ${SIDEBAR_CONTENT}
+  </aside>
