@@ -17,6 +17,7 @@ stylesheets
 - Add new theme: minisch
 - Permit to use ${VARIABLE} in CSS
 - Fix a bug that show twice post list for a given tag
+- Sidebar added
 
 Version 0.1 (released 2012-07-17)
 - RSS feed
